--- a/Services/Catalog/Courses.Services.Catalog/Courses.Services.Catalog.csproj
+++ b/Services/Catalog/Courses.Services.Catalog/Courses.Services.Catalog.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Courses.Shared\Courses.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
